Changelog for mk-table-checksum and mk-checksum-filter:

2010-09-11: version 1.2.18

   * Existing checksums were deleted before resuming (issue 304).
   * Lock timeouts were not retried (issue 345).
   * Added --databases-regex (issue 1112).
   * Added --tables-regex (issue 1112).
   * Added --ignore-databases-regex (issue 1112).
   * Added --ignore-tables-regex (issue 1112).

2010-08-01: version 1.2.17

   * Added --chunk-size-limit (issue 796).
   * Added --unchunkable-tables (issue 796).
   * Use optimizer preferred index as --chunk-index for --where (issue 378).

2010-07-01: version 1.2.16

   * Changed --no-use-index to --[no]use-index.
   * --schema did not allow --[no]check-replication-filters (issue 1060).
   * --chunk-index is only used if a chunkable column uses it (issue 519).
   * Added --[no]zero-chunk (issue 941).

2010-06-08: version 1.2.15

   * Chunking did not work with invalid dates (issue 602).
   * --replicate with InnoDB checksum table didn't work with --wait (issue 51).
   * Connections did not preserve server SQL modes (issue 801).
   * --empty-replicate-table did not work with replication filters (issue 982).
   * --replicate-check=0 did not skip the checksumming step (issue 1020).
   * MySQL 5.1 and --replicate need REPEATABLE READ isolation level (issue 720).
   * The --replicate table was not required to specify a database (issue 982).
   * Added --[no]check-replication-filters for --replicate sanity (issue 993).
   * Added --replicate-database to select a single default database (issue 982).
   * Added --chunk-column and --chunk-index (issue 519).

2010-05-03: version 1.2.14

   * Added --throttle-method, permit throttling by lag of all slaves (issue 67).
   * Checksum queries still caused fatal warnings on MySQL 5.1 (issue 186).

2010-04-01: version 1.2.13

   * Checksum queries caused fatal warnings on MySQL 5.1 (issue 186).
   * Added DSN OPTIONS section to POD (issue 55).